// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Step (private) completed 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  size: 18px;
  line-height: 1.33;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  background: white;
  padding: 16px 24px;
  color: #2f313a;
  color: white;
  background: #2ecc71;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c0 .description {
  padding: 0 16px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="icon"
  >
    <i
      className="wg-check"
    />
  </div>
  <div
    className="description"
  >
    Completed step
  </div>
</div>
`;

exports[`Storyshots Step (private) current 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  size: 18px;
  line-height: 1.33;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  background: white;
  padding: 16px 24px;
  cursor: pointer;
  color: #2f313a;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c0 .description {
  padding: 0 16px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0:hover {
  color: #3498db;
  border: solid 2px #3498db;
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="icon"
  >
    <i
      className="wg-checker"
    />
  </div>
  <div
    className="description"
  >
    Current step
  </div>
  <div
    className="icon"
  >
    <i
      className="wg-small-arrow-right"
    />
  </div>
</div>
`;

exports[`Storyshots Step (private) pending 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  size: 18px;
  line-height: 1.33;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  background: white;
  padding: 16px 24px;
  color: #2f313a;
  opacity: 0.24;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c0 .description {
  padding: 0 16px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="icon"
  >
    <i
      className="wg-checker"
    />
  </div>
  <div
    className="description"
  >
    Pending step
  </div>
  <div
    className="icon"
  >
    <i
      className="wg-small-arrow-right"
    />
  </div>
</div>
`;
